cabal-version:      2.4
name:               agda-ledger-executable-spec
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        HSLedgerTest

    other-extensions:
        CPP PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms

    build-depends:
        base,
        text,
        ieee

    ghc-options: -Wno-overlapping-patterns
    hs-source-dirs:   .
    default-language: Haskell2010
-- This will be generated automatically when building with nix
    other-modules:
        MAlonzo.Code.Induction.WellFounded
        MAlonzo.Code.Induction.Lexicographic
        MAlonzo.Code.Induction
        MAlonzo.Code.Generics
        MAlonzo.Code.Level
        MAlonzo.Code.Effect.Empty
        MAlonzo.Code.Effect.Functor
        MAlonzo.Code.Effect.Choice
        MAlonzo.Code.Effect.Monad
        MAlonzo.Code.Effect.Applicative
        MAlonzo.Code.Relation.Unary
        MAlonzo.Code.Relation.Nullary
        MAlonzo.Code.Relation.Unary.Properties
        MAlonzo.Code.Relation.Binary.Morphism
        MAlonzo.Code.Relation.Binary.Consequences
        MAlonzo.Code.Relation.Binary.Properties.Preorder
        MAlonzo.Code.Relation.Binary.Properties.Setoid
        MAlonzo.Code.Relation.Binary.Properties.TotalOrder
        MAlonzo.Code.Relation.Binary.Properties.Poset
        MAlonzo.Code.Relation.Binary.Properties.DecTotalOrder
        MAlonzo.Code.Relation.Binary.Bundles
        MAlonzo.Code.Relation.Binary.PropositionalEquality
        MAlonzo.Code.Relation.Binary.Lattice.Bundles
        MAlonzo.Code.Relation.Binary.Lattice.Definitions
        MAlonzo.Code.Relation.Binary.Lattice.Structures
        MAlonzo.Code.Relation.Binary.Reasoning.Preorder
        MAlonzo.Code.Relation.Binary.Reasoning.Setoid
        MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
        MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
        MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
        MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
        MAlonzo.Code.Relation.Binary.PropositionalEquality.WithK
        MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
        MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
        MAlonzo.Code.Relation.Binary.Definitions
        MAlonzo.Code.Relation.Binary.Core
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
        MAlonzo.Code.Relation.Binary.Structures
        MAlonzo.Code.Relation.Binary.Construct.Constant.Core
        MAlonzo.Code.Relation.Binary.Construct.Converse
        MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
        MAlonzo.Code.Relation.Binary.Construct.Intersection
        MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
        MAlonzo.Code.Relation.Binary.Construct.Subst.Equality
        MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive.Properties
        MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive
        MAlonzo.Code.Relation.Binary.Construct.On
        MAlonzo.Code.Relation.Binary.Lattice
        MAlonzo.Code.Relation.Binary.Morphism.Bundles
        MAlonzo.Code.Relation.Binary.Morphism.RelMonomorphism
        MAlonzo.Code.Relation.Binary.Morphism.Definitions
        MAlonzo.Code.Relation.Binary.Morphism.OrderMonomorphism
        MAlonzo.Code.Relation.Binary.Morphism.Structures
        MAlonzo.Code.Relation.Binary.Reflection
        MAlonzo.Code.Relation.Binary
        MAlonzo.Code.Relation.Nullary.Indexed
        MAlonzo.Code.Relation.Nullary.Decidable.Core
        MAlonzo.Code.Relation.Nullary.Negation
        MAlonzo.Code.Relation.Nullary.Reflects
        MAlonzo.Code.Relation.Nullary.Decidable
        MAlonzo.Code.Relation.Nullary.Negation.Core
        MAlonzo.Code.MyDebugOptions
        MAlonzo.Code.Function.Surjection
        MAlonzo.Code.Function.Equality
        MAlonzo.Code.Function.Bijection
        MAlonzo.Code.Function.LeftInverse
        MAlonzo.Code.Function.Nary.NonDependent
        MAlonzo.Code.Function.Nary.NonDependent.Base
        MAlonzo.Code.Function.Consequences
        MAlonzo.Code.Function.Properties.Surjection
        MAlonzo.Code.Function.Properties.Bijection
        MAlonzo.Code.Function.Properties.RightInverse
        MAlonzo.Code.Function.Properties.Inverse
        MAlonzo.Code.Function.Bundles
        MAlonzo.Code.Function.Related.TypeIsomorphisms
        MAlonzo.Code.Function.Related.Propositional
        MAlonzo.Code.Function.HalfAdjointEquivalence
        MAlonzo.Code.Function.Injection
        MAlonzo.Code.Function.Strict
        MAlonzo.Code.Function.Related
        MAlonzo.Code.Function.Base
        MAlonzo.Code.Function.Definitions.Core1
        MAlonzo.Code.Function.Definitions.Core2
        MAlonzo.Code.Function.Definitions
        MAlonzo.Code.Function.Core
        MAlonzo.Code.Function.Structures
        MAlonzo.Code.Function.Construct.Composition
        MAlonzo.Code.Function.Construct.Identity
        MAlonzo.Code.Function.Construct.Symmetry
        MAlonzo.Code.Function.Metric.Nat.Bundles
        MAlonzo.Code.Function.Metric.Nat.Definitions
        MAlonzo.Code.Function.Metric.Nat.Core
        MAlonzo.Code.Function.Metric.Nat.Structures
        MAlonzo.Code.Function.Metric.Bundles
        MAlonzo.Code.Function.Metric.Nat
        MAlonzo.Code.Function.Metric.Definitions
        MAlonzo.Code.Function.Metric.Core
        MAlonzo.Code.Function.Metric.Structures
        MAlonzo.Code.Function.Inverse
        MAlonzo.Code.Function.Equivalence
        MAlonzo.Code.Prelude
        MAlonzo.Code.Meta
        MAlonzo.Code.Agda.Primitive
        MAlonzo.Code.Agda.Builtin.Bool
        MAlonzo.Code.Agda.Builtin.Char
        MAlonzo.Code.Agda.Builtin.Equality
        MAlonzo.Code.Agda.Builtin.List
        MAlonzo.Code.Agda.Builtin.Nat
        MAlonzo.Code.Agda.Builtin.Maybe
        MAlonzo.Code.Agda.Builtin.Strict
        MAlonzo.Code.Agda.Builtin.Int
        MAlonzo.Code.Agda.Builtin.Reflection.Properties
        MAlonzo.Code.Agda.Builtin.String.Properties
        MAlonzo.Code.Agda.Builtin.Word
        MAlonzo.Code.Agda.Builtin.Float.Properties
        MAlonzo.Code.Agda.Builtin.Unit
        MAlonzo.Code.Agda.Builtin.IO
        MAlonzo.Code.Agda.Builtin.Equality.Erase
        MAlonzo.Code.Agda.Builtin.Sigma
        MAlonzo.Code.Agda.Builtin.Char.Properties
        MAlonzo.Code.Agda.Builtin.String
        MAlonzo.Code.Agda.Builtin.Word.Properties
        MAlonzo.Code.Agda.Builtin.Float
        MAlonzo.Code.Agda.Builtin.Reflection
        MAlonzo.Code.Foreign.Haskell.Pair
        MAlonzo.Code.Foreign.Haskell.Either
        MAlonzo.Code.Foreign.Haskell.List.NonEmpty
        MAlonzo.Code.Foreign.Haskell.Coerce
        MAlonzo.Code.Foreign.Convertible
        MAlonzo.Code.Foreign.Haskell
        MAlonzo.Code.Interface.MonadReader
        MAlonzo.Code.Interface.MonadTC
        MAlonzo.Code.Interface.MonadError.Instance
        MAlonzo.Code.Interface.Decidable.Instance
        MAlonzo.Code.Interface.MonadError
        MAlonzo.Code.Interface.Hashable
        MAlonzo.Code.Interface.MonadTC.Instance
        MAlonzo.Code.Interface.Monad.Instance
        MAlonzo.Code.Interface.STS
        MAlonzo.Code.Interface.ComputationalRelation
        MAlonzo.Code.Interface.MonadReader.Instance
        MAlonzo.Code.Interface.DecEq.Ext
        MAlonzo.Code.Interface.DecEq
        MAlonzo.Code.Interface.Monad
        MAlonzo.Code.Interface.DecRel
        MAlonzo.Code.Test.GetType
        MAlonzo.Code.Function
        MAlonzo.Code.Reflection.AST
        MAlonzo.Code.Reflection.TCM.Format
        MAlonzo.Code.Reflection.TCM.Syntax
        MAlonzo.Code.Reflection.TCM
        MAlonzo.Code.Reflection.Syntax
        MAlonzo.Code.Reflection.AST.Show
        MAlonzo.Code.Reflection.AST.Pattern
        MAlonzo.Code.Reflection.AST.Literal
        MAlonzo.Code.Reflection.AST.Argument.Information
        MAlonzo.Code.Reflection.AST.Argument.Visibility
        MAlonzo.Code.Reflection.AST.Argument.Relevance
        MAlonzo.Code.Reflection.AST.Argument.Modality
        MAlonzo.Code.Reflection.AST.Argument.QQuantity
        MAlonzo.Code.Reflection.AST.Meta
        MAlonzo.Code.Reflection.AST.AlphaEquality
        MAlonzo.Code.Reflection.AST.Abstraction
        MAlonzo.Code.Reflection.AST.Definition
        MAlonzo.Code.Reflection.AST.Name
        MAlonzo.Code.Reflection.AST.Argument
        MAlonzo.Code.Reflection.AST.Term
        MAlonzo.Code.Reflection.Debug
        MAlonzo.Code.Reflection.TCI
        MAlonzo.Code.Class.Applicative.Instances
        MAlonzo.Code.Class.Applicative.Core
        MAlonzo.Code.Class.Monad.Utils
        MAlonzo.Code.Class.Monad.Instances
        MAlonzo.Code.Class.Monad.Core
        MAlonzo.Code.Class.Monoid.Instances
        MAlonzo.Code.Class.Monoid.Core
        MAlonzo.Code.Class.Semigroup.Instances
        MAlonzo.Code.Class.Semigroup.Core
        MAlonzo.Code.Class.Show.Instances
        MAlonzo.Code.Class.Show.Core
        MAlonzo.Code.Class.Traversable.Instances
        MAlonzo.Code.Class.Traversable.Core
        MAlonzo.Code.Class.Foldable.Instances
        MAlonzo.Code.Class.Foldable.Core
        MAlonzo.Code.Class.Functor.Instances
        MAlonzo.Code.Class.Functor.Core
        MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
        MAlonzo.Code.Axiom.Extensionality.Propositional
        MAlonzo.Code.Axiom.Set
        MAlonzo.Code.Axiom.UniquenessOfIdentityProofs.WithK
        MAlonzo.Code.Axiom.Set.Properties
        MAlonzo.Code.Axiom.Set.Factor
        MAlonzo.Code.Axiom.Set.List
        MAlonzo.Code.Axiom.Set.Map
        MAlonzo.Code.Axiom.Set.Sum
        MAlonzo.Code.Axiom.Set.TotalMapOn
        MAlonzo.Code.Axiom.Set.TotalMap
        MAlonzo.Code.Axiom.Set.Map.Dec
        MAlonzo.Code.Axiom.Set.Rel
        MAlonzo.Code.Algebra.Morphism
        MAlonzo.Code.Algebra.Bundles.Raw
        MAlonzo.Code.Algebra.Properties.AbelianGroup
        MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
        MAlonzo.Code.Algebra.Properties.Semiring.Exp.TCOptimised
        MAlonzo.Code.Algebra.Properties.Semiring.Exp
        MAlonzo.Code.Algebra.Properties.Semigroup
        MAlonzo.Code.Algebra.Properties.CommutativeSemiring.Exp.TCOptimised
        MAlonzo.Code.Algebra.Properties.Monoid.Mult
        MAlonzo.Code.Algebra.Properties.Monoid.Mult.TCOptimised
        MAlonzo.Code.Algebra.Properties.Ring
        MAlonzo.Code.Algebra.Properties.Group
        MAlonzo.Code.Algebra.Properties.CommutativeMonoid.Mult
        MAlonzo.Code.Algebra.Properties.CommutativeMonoid.Mult.TCOptimised
        MAlonzo.Code.Algebra.Bundles
        MAlonzo.Code.Algebra.Structures.Biased
        MAlonzo.Code.Algebra.Lattice.Bundles.Raw
        MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
        MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
        MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
        MAlonzo.Code.Algebra.Lattice.Properties.Lattice
        MAlonzo.Code.Algebra.Lattice.Bundles
        MAlonzo.Code.Algebra.Lattice.Structures.Biased
        MAlonzo.Code.Algebra.Lattice.Structures
        MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
        MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
        MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
        MAlonzo.Code.Algebra.Lattice.Morphism.LatticeMonomorphism
        MAlonzo.Code.Algebra.Lattice.Morphism.Structures
        MAlonzo.Code.Algebra.Solver.Ring.AlmostCommutativeRing
        MAlonzo.Code.Algebra.Solver.Ring.Lemmas
        MAlonzo.Code.Algebra.Solver.Ring.Simple
        MAlonzo.Code.Algebra.Solver.Ring
        MAlonzo.Code.Algebra.Function
        MAlonzo.Code.Algebra.Definitions.RawMonoid
        MAlonzo.Code.Algebra.Definitions.RawSemiring
        MAlonzo.Code.Algebra.Definitions.RawMagma
        MAlonzo.Code.Algebra.Definitions
        MAlonzo.Code.Algebra.Core
        MAlonzo.Code.Algebra.Consequences.Setoid
        MAlonzo.Code.Algebra.Consequences.Propositional
        MAlonzo.Code.Algebra.Consequences.Base
        MAlonzo.Code.Algebra.Structures
        MAlonzo.Code.Algebra.Construct.LiftedChoice
        MAlonzo.Code.Algebra.Construct.NaturalChoice.Max
        MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
        MAlonzo.Code.Algebra.Construct.NaturalChoice.Min
        MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
        MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
        MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
        MAlonzo.Code.Algebra.Lattice
        MAlonzo.Code.Algebra.Morphism.GroupMonomorphism
        MAlonzo.Code.Algebra.Morphism.RingMonomorphism
        MAlonzo.Code.Algebra.Morphism.MagmaMonomorphism
        MAlonzo.Code.Algebra.Morphism.MonoidMonomorphism
        MAlonzo.Code.Algebra.Morphism.Definitions
        MAlonzo.Code.Algebra.Morphism.Structures
        MAlonzo.Code.PreludeImports
        MAlonzo.Code.Ledger.TokenAlgebra
        MAlonzo.Code.Ledger.Prelude.Base
        MAlonzo.Code.Ledger.Utxow.Properties
        MAlonzo.Code.Ledger.Deleg
        MAlonzo.Code.Ledger.Prelude
        MAlonzo.Code.Ledger.PParams
        MAlonzo.Code.Ledger.Foreign.LedgerTypes
        MAlonzo.Code.Ledger.Foreign.HSLedger
        MAlonzo.Code.Ledger.Interface.HasCoin
        MAlonzo.Code.Ledger.Crypto
        MAlonzo.Code.Ledger.GovernanceActions
        MAlonzo.Code.Ledger.Utxo
        MAlonzo.Code.Ledger.Utxow
        MAlonzo.Code.Ledger.Utxo.Properties
        MAlonzo.Code.Ledger.Address
        MAlonzo.Code.Ledger.Transaction
        MAlonzo.Code.Ledger.Script
        MAlonzo.Code.Ledger.Epoch
        MAlonzo.Code.Text.Format.Generic
        MAlonzo.Code.Text.Printf
        MAlonzo.Code.Text.Format
        MAlonzo.Code.Text.Printf.Generic
        MAlonzo.Code.Data.Rational.Properties
        MAlonzo.Code.Data.Rational.Unnormalised.Properties
        MAlonzo.Code.Data.Rational.Unnormalised.Base
        MAlonzo.Code.Data.Rational.Base
        MAlonzo.Code.Data.Bool
        MAlonzo.Code.Data.Char
        MAlonzo.Code.Data.Product
        MAlonzo.Code.Data.Empty
        MAlonzo.Code.Data.Nat.Induction
        MAlonzo.Code.Data.Nat.Show
        MAlonzo.Code.Data.Nat.DivMod
        MAlonzo.Code.Data.Nat.Properties
        MAlonzo.Code.Data.Nat.Divisibility.Core
        MAlonzo.Code.Data.Nat.GCD.Lemmas
        MAlonzo.Code.Data.Nat.Divisibility
        MAlonzo.Code.Data.Nat.DivMod.Core
        MAlonzo.Code.Data.Nat.Primality
        MAlonzo.Code.Data.Nat.Solver
        MAlonzo.Code.Data.Nat.Base
        MAlonzo.Code.Data.Nat.Coprimality
        MAlonzo.Code.Data.Nat.Tactic.RingSolver
        MAlonzo.Code.Data.Nat.GCD
        MAlonzo.Code.Data.Nat.Reflection
        MAlonzo.Code.Data.Bool.Show
        MAlonzo.Code.Data.Bool.Properties
        MAlonzo.Code.Data.Bool.Base
        MAlonzo.Code.Data.Empty.Polymorphic
        MAlonzo.Code.Data.Empty.Irrelevant
        MAlonzo.Code.Data.List
        MAlonzo.Code.Data.Nat
        MAlonzo.Code.Data.Digit
        MAlonzo.Code.Data.Rational
        MAlonzo.Code.Data.Sign.Properties
        MAlonzo.Code.Data.Sign.Base
        MAlonzo.Code.Data.Fin
        MAlonzo.Code.Data.Integer.Show
        MAlonzo.Code.Data.Integer.Properties
        MAlonzo.Code.Data.Integer.Divisibility
        MAlonzo.Code.Data.Integer.Solver
        MAlonzo.Code.Data.Integer.Base
        MAlonzo.Code.Data.Integer.Coprimality
        MAlonzo.Code.Data.Integer.GCD
        MAlonzo.Code.Data.Integer.Ext
        MAlonzo.Code.Data.Parity.Base
        MAlonzo.Code.Data.Maybe
        MAlonzo.Code.Data.Container
        MAlonzo.Code.Data.Unit.Properties
        MAlonzo.Code.Data.Unit.Polymorphic
        MAlonzo.Code.Data.Unit.Polymorphic.Properties
        MAlonzo.Code.Data.Unit.Polymorphic.Base
        MAlonzo.Code.Data.Unit.Base
        MAlonzo.Code.Data.String.Properties
        MAlonzo.Code.Data.String.Base
        MAlonzo.Code.Data.Integer
        MAlonzo.Code.Data.Sum
        MAlonzo.Code.Data.Word
        MAlonzo.Code.Data.Fin.Properties
        MAlonzo.Code.Data.Fin.Patterns
        MAlonzo.Code.Data.Fin.Base
        MAlonzo.Code.Data.Float.Properties
        MAlonzo.Code.Data.Float.Base
        MAlonzo.Code.Data.Unit
        MAlonzo.Code.Data.Container.Properties
        MAlonzo.Code.Data.Container.Morphism
        MAlonzo.Code.Data.Container.Membership
        MAlonzo.Code.Data.Container.Relation.Unary.All
        MAlonzo.Code.Data.Container.Relation.Unary.Any
        MAlonzo.Code.Data.Container.Relation.Binary.Pointwise.Properties
        MAlonzo.Code.Data.Container.Relation.Binary.Equality.Setoid
        MAlonzo.Code.Data.Container.Relation.Binary.Pointwise
        MAlonzo.Code.Data.Container.Related
        MAlonzo.Code.Data.Container.Core
        MAlonzo.Code.Data.Container.Morphism.Properties
        MAlonzo.Code.Data.Universe
        MAlonzo.Code.Data.Irrelevant
        MAlonzo.Code.Data.Vec.NZ45Zary
        MAlonzo.Code.Data.Vec.Functional
        MAlonzo.Code.Data.Vec.Base
        MAlonzo.Code.Data.Vec.Bounded.Base
        MAlonzo.Code.Data.Vec.Reflection
        MAlonzo.Code.Data.Refinement
        MAlonzo.Code.Data.Char.Properties
        MAlonzo.Code.Data.Char.Base
        MAlonzo.Code.Data.W
        MAlonzo.Code.Data.String
        MAlonzo.Code.Data.Record
        MAlonzo.Code.Data.Word.Properties
        MAlonzo.Code.Data.Word.Base
        MAlonzo.Code.Data.These
        MAlonzo.Code.Data.These.Base
        MAlonzo.Code.Data.Float
        MAlonzo.Code.Data.Vec
        MAlonzo.Code.Data.Maybe.Properties
        MAlonzo.Code.Data.Maybe.Properties.Ext
        MAlonzo.Code.Data.Maybe.Relation.Unary.All
        MAlonzo.Code.Data.Maybe.Relation.Unary.Any
        MAlonzo.Code.Data.Maybe.Relation.Binary.Connected
        MAlonzo.Code.Data.Maybe.Base
        MAlonzo.Code.Data.Maybe.Effectful
        MAlonzo.Code.Data.Sum.Effectful.Left
        MAlonzo.Code.Data.Sum.Properties
        MAlonzo.Code.Data.Sum.Relation.Binary.Pointwise
        MAlonzo.Code.Data.Sum.Function.Setoid
        MAlonzo.Code.Data.Sum.Function.Propositional
        MAlonzo.Code.Data.Sum.Base
        MAlonzo.Code.Data.Sum.Algebra
        MAlonzo.Code.Data.Product.Properties
        MAlonzo.Code.Data.Product.Nary.NonDependent
        MAlonzo.Code.Data.Product.Properties.Ext
        MAlonzo.Code.Data.Product.Relation.Unary.All
        MAlonzo.Code.Data.Product.Relation.Binary.Pointwise.NonDependent
        MAlonzo.Code.Data.Product.Function.NonDependent.Setoid
        MAlonzo.Code.Data.Product.Function.NonDependent.Propositional
        MAlonzo.Code.Data.Product.Function.Dependent.Propositional
        MAlonzo.Code.Data.Product.Base
        MAlonzo.Code.Data.Product.Algebra
        MAlonzo.Code.Data.List.Membership.Propositional.Properties
        MAlonzo.Code.Data.List.Membership.Propositional.Properties.Core
        MAlonzo.Code.Data.List.Membership.Setoid
        MAlonzo.Code.Data.List.Membership.Setoid.Properties
        MAlonzo.Code.Data.List.Membership.DecSetoid
        MAlonzo.Code.Data.List.Membership.Propositional
        MAlonzo.Code.Data.List.Membership.DecPropositional
        MAlonzo.Code.Data.List.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Linked
        MAlonzo.Code.Data.List.Relation.Unary.All
        MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Properties
        MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Core
        MAlonzo.Code.Data.List.Relation.Unary.Any.Properties
        MAlonzo.Code.Data.List.Relation.Unary.AllPairs
        MAlonzo.Code.Data.List.Relation.Unary.Sorted.TotalOrder
        MAlonzo.Code.Data.List.Relation.Unary.Sorted.TotalOrder.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Unique.Propositional.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Unique.Propositional.Properties.WithK
        MAlonzo.Code.Data.List.Relation.Unary.Unique.DecSetoid.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid
        MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Unique.DecPropositional.Properties
        MAlonzo.Code.Data.List.Relation.Unary.Unique.DecSetoid
        MAlonzo.Code.Data.List.Relation.Unary.Unique.Propositional
        MAlonzo.Code.Data.List.Relation.Unary.Unique.DecPropositional
        MAlonzo.Code.Data.List.Relation.Unary.Any
        MAlonzo.Code.Data.List.Relation.Unary.Linked.Properties
        MAlonzo.Code.Data.List.Relation.Unary.All.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Lex
        MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid
        MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional
        MAlonzo.Code.Data.List.Relation.Binary.Permutation.Propositional.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Permutation.Setoid
        MAlonzo.Code.Data.List.Relation.Binary.Permutation.Setoid.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Permutation.Homogeneous
        MAlonzo.Code.Data.List.Relation.Binary.Permutation.Propositional
        MAlonzo.Code.Data.List.Relation.Binary.Disjoint.Setoid
        MAlonzo.Code.Data.List.Relation.Binary.Disjoint.Setoid.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Disjoint.Propositional
        MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Base
        MAlonzo.Code.Data.List.Relation.Binary.BagAndSetEquality
        MAlonzo.Code.Data.List.Relation.Binary.Equality.Setoid
        MAlonzo.Code.Data.List.Relation.Binary.Equality.Propositional
        MAlonzo.Code.Data.List.Relation.Binary.Pointwise
        MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous
        MAlonzo.Code.Data.List.Relation.Binary.Sublist.Setoid
        MAlonzo.Code.Data.List.Relation.Binary.Sublist.Propositional
        MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous.Properties
        MAlonzo.Code.Data.List.Relation.Binary.Sublist.Heterogeneous.Core
        MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
        MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
        MAlonzo.Code.Data.List.Sort
        MAlonzo.Code.Data.List.Sort.MergeSort
        MAlonzo.Code.Data.List.Sort.Base
        MAlonzo.Code.Data.List.NonEmpty.Base
        MAlonzo.Code.Data.List.Kleene.Base
        MAlonzo.Code.Data.List.Base
        MAlonzo.Code.Data.List.Effectful
        MAlonzo.Code.Data.List.Extrema.Core
        MAlonzo.Code.Data.List.Extrema
        MAlonzo.Code.Data.List.Kleene
        MAlonzo.Code.Data.List.NonEmpty
        MAlonzo.Code.Data.List.Ext.Properties
        MAlonzo.Code.Data.List.Reflection
        MAlonzo.Code.Data.Sign
        MAlonzo.Code.IO.Primitive
        MAlonzo.Code.MetaPrelude
        MAlonzo.Code.Tactic.EquationalReasoning
        MAlonzo.Code.Tactic.Derive.DecEq
        MAlonzo.Code.Tactic.Derive.TestTypes
        MAlonzo.Code.Tactic.Helpers
        MAlonzo.Code.Tactic.ClauseBuilder
        MAlonzo.Code.Tactic.RingSolver.Core.AlmostCommutativeRing
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Semantics
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Parameters
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Base
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Exponentiation
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Lemmas
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Negation
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Variables
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Multiplication
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Constants
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Homomorphism.Addition
        MAlonzo.Code.Tactic.RingSolver.Core.Polynomial.Reasoning
        MAlonzo.Code.Tactic.RingSolver.Core.NatSet
        MAlonzo.Code.Tactic.RingSolver.Core.Expression
        MAlonzo.Code.Tactic.RingSolver.NonReflective
        MAlonzo.Code.Tactic.ReduceDec
        MAlonzo.Code.Tactic.Cong
        MAlonzo.Code.Tactic.Defaults
        MAlonzo.Code.Tactic.AnyOf
        MAlonzo.Code.Tactic.Derive
        MAlonzo.Code.Tactic.MonoidSolver
        MAlonzo.Code.Tactic.DeriveComp
        MAlonzo.Code.Tactic.RingSolver
        MAlonzo.Code.Tactic.Assumption
        MAlonzo.Code.Tactic.Constrs
        MAlonzo.Code.Algebra
        MAlonzo.Code.Generics.Utils
        MAlonzo.Code.Generics.Deriving
        MAlonzo.Code.Generics.Debug
        MAlonzo.Code.Generics.Core
        MAlonzo.Code.Reflection
        MAlonzo.RTE.Float
        MAlonzo.RTE
