cabal-version: 3.0
name: cardano-canonical
version: 9.9.9.9
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
description:
  Library for definition of the canonical state. The library defines canonical types and conversion
  functions for the non era-specific parts of the Cardano ledger state.

build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger.git
  subdir: libs/cardano-canonical

library
  exposed-modules:
    -- Cardano.Ledger.Conway.SCLS
    -- Cardano.Ledger.Conway.SCLS.Common
    Cardano.Ledger.SCLS.BaseTypes
    Cardano.Ledger.SCLS.LedgerCBOR
    Cardano.Ledger.SCLS.Namespace.BlocksV0
    -- Cardano.Ledger.Conway.SCLS.Namespace.GovCommittee
    -- Cardano.Ledger.Conway.SCLS.Namespace.GovConstitution
    -- Cardano.Ledger.Conway.SCLS.Namespace.GovPParams
    -- Cardano.Ledger.Conway.SCLS.Namespace.GovProposals
    -- Cardano.Ledger.Conway.SCLS.Namespace.Nonces
    -- Cardano.Ledger.Conway.SCLS.Namespace.PoolStake
    -- Cardano.Ledger.Conway.SCLS.Namespace.Pots
    -- Cardano.Ledger.Conway.SCLS.Namespace.Snapshots
    -- Cardano.Ledger.Conway.SCLS.Namespace.UTxO

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -Werror

  build-depends:
    base,
    -- bytestring,
    -- cardano-crypto-class,
    -- -- cardano-ledger-allegra,
    -- -- cardano-ledger-alonzo,
    -- -- cardano-ledger-babbage,
    -- -- cardano-ledger-binary,
    -- -- cardano-ledger-conway,
    cardano-ledger-core,
    -- -- cardano-ledger-mary,
    -- -- cardano-ledger-shelley,
    -- cardano-slotting,
    -- cardano-strict-containers,
    cborg,
    -- containers,
    iproute,
    -- mempack,
    mempack-scls,
    scls-cardano,
    cardano-ledger-binary,
    scls-cbor,
    scls-core,
    -- text,

-- library testlib
--   exposed-modules:
--     Cardano.Ledger.Conway.SCLS.Arbitrary
--
--   visibility: public
--   hs-source-dirs: scls/testlib
--   default-language: Haskell2010
--   ghc-options:
--     -Wall
--     -Wcompat
--     -Wincomplete-record-updates
--     -Wincomplete-uni-patterns
--     -Wpartial-fields
--     -Wredundant-constraints
--     -Wunused-packages
--     -Werror
--
--   build-depends:
--     QuickCheck,
--     base,
--     cardano-ledger-babbage:testlib,
--     cardano-ledger-conway:{scls, testlib},
--     cardano-ledger-core:testlib,
--     generic-random,
--