cabal-version: 3.0
name: cardano-canonical
version: 9.9.9.9
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
description:
  Library for definition of the canonical state. The library defines canonical types and conversion
  functions for the non era-specific parts of the Cardano ledger state.

build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger.git
  subdir: libs/cardano-canonical

library
  exposed-modules:
    Cardano.Ledger.SCLS.BaseTypes
    Cardano.Ledger.SCLS.Common
    Cardano.Ledger.SCLS.LedgerCBOR
    Cardano.Ledger.SCLS.Namespace.Blocks.V0
    Cardano.Ledger.SCLS.Namespace.GovCommittee.V0
    Cardano.Ledger.SCLS.Namespace.GovConstitution.V0
    Cardano.Ledger.SCLS.Namespace.GovPParams.V0
    Cardano.Ledger.SCLS.Namespace.GovProposals.V0
    Cardano.Ledger.SCLS.Namespace.Nonces.V0
    Cardano.Ledger.SCLS.Namespace.PoolStake.V0
    Cardano.Ledger.SCLS.Namespace.Pots.V0
    Cardano.Ledger.SCLS.Namespace.Snapshots.V0
    Cardano.Ledger.SCLS.Namespace.UTxO.V0

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -Werror

  build-depends:
    base,
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-ledger-binary,
    cardano-ledger-core,
    cardano-slotting,
    cardano-strict-containers,
    cborg,
    containers,
    iproute,
    mempack-scls,
    primitive,
    scls-cardano,
    scls-cbor,
    scls-core,
    text,

library testlib
  exposed-modules:
    Test.Cardano.Ledger.SCLS.Arbitrary

  visibility: public
  hs-source-dirs: testlib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  --  -Wunused-packages
    -Werror

  build-depends:
    QuickCheck,
    base,
    bytestring,
    cardano-canonical,
--     cardano-ledger-babbage:testlib,
--     cardano-ledger-conway:{scls, testlib},
    containers,
    cardano-ledger-core:testlib,
    generic-random,


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Paths_cardano_canonical
    Test.Cardano.Ledger.SCLS.Spec

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
   -- -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    cardano-ledger-core:{cardano-ledger-core, testlib},
    scls-cbor,
    scls-cardano:testlib,
    cardano-canonical:{cardano-canonical,testlib},
    testlib,

    containers,
    bytestring
