cabal-version:   3.4
name:            cardano-cddl
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      operations@iohk.io
author:          IOG
homepage:        https://github.com/intersectmbo/cardano-ledger
synopsis:        Tool to generate CDDL specifications for the ledger
category:        Codec
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable cardano-cddl
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14.0.0,
        cardano-ledger-conway:testlib,
        containers,
        cuddle >=0.2.1,
        prettyprinter,
        text
