cabal-version:      3.0
name:               cardano-data
version:            1.1.2.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
homepage:           https://github.com/input-output-hk/cardano-ledger
synopsis:           Specialized data for Cardano project
category:           Control
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   libs/cardano-data

library
    exposed-modules:
        Data.CanonicalMaps
        Data.Pulse
        Data.MapExtras
        Data.ListMap
        Data.Universe
        Data.OSet.Strict
        Data.OMap.Strict

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.14 && <4.19,
        aeson >=2.2,
        cardano-ledger-binary >=1.2,
        cardano-strict-containers >=0.1.2.1,
        containers,
        data-default-class,
        deepseq,
        mtl,
        nothunks,
        vector,
        microlens

library testlib
    exposed-modules:
        Test.Cardano.Data
        Test.Cardano.Data.Arbitrary

    visibility:       public
    hs-source-dirs:   testlib
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base,
        cardano-data,
        cardano-ledger-binary:testlib,
        containers,
        hspec,
        QuickCheck,
        cardano-ledger-binary:testlib,
        cardano-data,
        microlens

test-suite cardano-data-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Cardano.Data.MapExtrasSpec
        Test.Cardano.Data.OSet.StrictSpec
        Test.Cardano.Data.OMap.StrictSpec

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded

    build-depends:
        base,
        cardano-strict-containers,
        containers,
        hspec,
        cardano-data,
        cardano-ledger-binary:testlib,
        testlib,
        QuickCheck,
        quickcheck-classes-base,
        microlens
