cabal-version: 3.0
name: cardano-data
version: 1.3.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
homepage: https://github.com/intersectmbo/cardano-ledger
synopsis: Specialized data for Cardano project
category: Control
build-type: Simple
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger
  subdir: libs/cardano-data

library
  exposed-modules:
    Data.CanonicalMaps
    Data.ListMap
    Data.Map.NonEmpty
    Data.MapExtras
    Data.MonoTuple
    Data.OMap.Strict
    Data.OSet.Strict
    Data.Pulse
    Data.Set.NonEmpty
    Data.Universe

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages

  build-depends:
    aeson >=2.2,
    base >=4.18 && <5,
    cardano-ledger-binary >=1.8,
    cardano-strict-containers >=0.1.2.1,
    containers,
    data-default,
    deepseq,
    mtl,
    nothunks,
    vector,

library testlib
  exposed-modules:
    Test.Cardano.Data
    Test.Cardano.Data.Arbitrary
    Test.Cardano.Data.TreeDiff

  visibility: public
  hs-source-dirs: testlib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages

  build-depends:
    QuickCheck,
    base,
    cardano-data,
    cardano-ledger-binary:testlib,
    containers,
    hspec,

test-suite cardano-data-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Cardano.Data.MapExtrasSpec
    Test.Cardano.Data.OMap.StrictSpec
    Test.Cardano.Data.OSet.StrictSpec

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages
    -threaded
    -rtsopts

  build-depends:
    QuickCheck,
    base,
    cardano-data,
    cardano-ledger-binary:{cardano-ledger-binary, testlib},
    cardano-strict-containers:{cardano-strict-containers, testlib},
    containers,
    hspec,
    quickcheck-classes,
    testlib,
