cabal-version:      3.0
name:               cardano-ledger-api
version:            1.4.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
bug-reports:        https://github.com/input-output-hk/cardano-ledger/issues
synopsis:           Public API for the cardano ledger codebase
description:
    This package a public interface into the cardano ledger codebase. It also
    provides functionality that works for all eras and is useful for downstream
    packages.

build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   libs/cardano-ledger-api

library
    exposed-modules:
        Cardano.Ledger.Api
        Cardano.Ledger.Api.Era
        Cardano.Ledger.Api.Governance
        Cardano.Ledger.Api.PParams
        Cardano.Ledger.Api.Scripts
        Cardano.Ledger.Api.Scripts.Data
        Cardano.Ledger.Api.Tx
        Cardano.Ledger.Api.Tx.Address
        Cardano.Ledger.Api.Tx.AuxData
        Cardano.Ledger.Api.Tx.Body
        Cardano.Ledger.Api.Tx.Cert
        Cardano.Ledger.Api.Tx.In
        Cardano.Ledger.Api.Tx.Out
        Cardano.Ledger.Api.Tx.Wits
        Cardano.Ledger.Api.State.Query
        Cardano.Ledger.Api.UTxO

    hs-source-dirs:   src
    other-modules:    Cardano.Ledger.Api.Scripts.ExUnits
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <4.19,
        array,
        cardano-ledger-allegra >=1.1,
        cardano-ledger-alonzo >=1.4,
        cardano-ledger-babbage >=1.1,
        cardano-ledger-binary >=1.0,
        cardano-ledger-conway >=1.7,
        cardano-ledger-core >=1.5 && <1.6,
        cardano-ledger-mary >=1.1,
        cardano-ledger-shelley ^>=1.5,
        cardano-slotting,
        containers,
        microlens,
        plutus-ledger-api,
        text

library testlib
    exposed-modules:  Test.Cardano.Ledger.Api.State.Query
    visibility:       public
    hs-source-dirs:   testlib
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base,
        containers,
        cardano-ledger-core

test-suite cardano-ledger-api-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    other-modules:
        Test.Cardano.Ledger.Api.Tx.Out
        Test.Cardano.Ledger.Api.Tx.Body
        Test.Cardano.Ledger.Api.State.QuerySpec

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages -rtsopts -threaded

    build-depends:
        base,
        bytestring,
        cardano-ledger-api,
        testlib,
        cardano-ledger-binary,
        cardano-ledger-babbage:testlib,
        cardano-ledger-core:{cardano-ledger-core, testlib},
        cardano-ledger-conway:{cardano-ledger-conway, testlib},
        cardano-ledger-shelley,
        cardano-strict-containers,
        containers,
        microlens
